--- a/using-sony-alpha-camera-as-a-webcam-in-ubuntu.html
+++ b/using-sony-alpha-camera-as-a-webcam-in-ubuntu.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers.html">
 hanspinckaers
 </a>
-updated 16 seconds ago
+updated 2 minutes ago
 <span style="float:right">created: 05 October 2020
 </span>
 </div><div class=" tc-reveal">
