--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers.html">
 hanspinckaers
 </a>
-updated 7 minutes ago
+updated 104 minutes ago
 <span style="float:right">created: 12 October 2020
 </span>
 </div><div class=" tc-reveal">
@@ -68,7 +68,7 @@ Public
 
 </div><div class="tc-tiddler-body tc-reveal"><p><strong>About me</strong></p><p>Hans Pinckaers is a <a class="tc-tiddlylink tc-tiddlylink-missing" href="./phd.html">PhD</a> candidate in the Computational Pathology group of the Department of Pathology of the Radboud University Medical Center in Nijmegen. He studied Medicine at Leiden University Medical Center for which he obtained his MD in 2016. After his graduation he worked one year as a Pathology resident. In 2017, Hans joined the Diagnostic Image Analysis Group where he works under the supervision of Geert Litjens and Jeroen van der Laak on deep learning for improved prognostics in prostate cancer.</p><p><strong>Public notes</strong>
 <br>
-<ul class=""><li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./using-a-sony-alpha-camera-as-a-webcam-in-ubuntu.html">Using a Sony alpha camera as a webcam in Ubuntu</a></li></ul>
+<ul class=""><li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./decaffeinated-coffee-beans-sources-in-the-netherlands.html">Decaffeinated coffee beans  — sources in The Netherlands</a></li><li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./using-a-sony-alpha-camera-as-a-webcam-in-ubuntu.html">Using a Sony alpha camera as a webcam in Ubuntu</a></li></ul>
 </p></div>
 
 
