--- a/decaffeinated-coffee-beans-sources-in-the-netherlands.html
+++ b/decaffeinated-coffee-beans-sources-in-the-netherlands.html
@@ -13,7 +13,7 @@
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="static.css">
 <link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;700&display=swap" rel="stylesheet">
-<title>Decaffeinated coffee beans  — sources in The Netherlands:  — </title>
+<title>Decaffeinated coffee beans  — sources in The Netherlands— Hans Pinckaers</title>
 </head>
 <body class="tc-body">
 
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers.html">
 hanspinckaers
 </a>
-updated 14 seconds ago
+updated 5 minutes ago
 <span style="float:right">created: 24 August 2020
 </span>
 </div><div class=" tc-reveal">
