--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="static.css">
 <link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;700&display=swap" rel="stylesheet">
-<title>Overview:  — </title>
+<title>Overview— Hans Pinckaers</title>
 </head>
 <body class="tc-body">
 
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers.html">
 hanspinckaers
 </a>
-updated 106 minutes ago
+updated 111 minutes ago
 <span style="float:right">created: 12 October 2020
 </span>
 </div><div class=" tc-reveal">
