--- a/using-a-sony-alpha-camera-as-a-webcam-in-ubuntu.html
+++ b/using-a-sony-alpha-camera-as-a-webcam-in-ubuntu.html
@@ -13,14 +13,14 @@
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="static.css">
 <link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;700&display=swap" rel="stylesheet">
-<title>Using a Sony alpha camera as a webcam in Ubuntu— Hans Pinckaers</title>
+<title>Using a Sony alpha camera as a webcam in Ubuntu — Hans Pinckaers</title>
 </head>
 <body class="tc-body">
 
 <div class="tc-sidebar-scrollable" style="overflow: auto;">
 <div class="tc-sidebar-header"><h1 class="tc-site-title"><a href="/" class='tc-tiddlylink'>Hans Pinckaers — Public notes</a> </h1></div>
 
-<div class="tc-site-subtitle">A collection of public notes exported from my private <a href="https://tiddlywiki.com/" class="tc-tiddlylink">tiddlywiki</a>. Find the <a href="/" class="tc-tiddlylink">overview of all notes here.</a> Feedback? You can reach me at <em>mail@hanspinckaers.com</em>.</div>
+<div class="tc-site-subtitle">A collection of short public notes exported from my private <a href="https://tiddlywiki.com/" class="tc-tiddlylink">tiddlywiki</a>. Find the <a href="/" class="tc-tiddlylink">overview of all notes here.</a> Feedback? You can reach me at <em>mail@hanspinckaers.com</em>.</div>
 </div>
 
 
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers.html">
 hanspinckaers
 </a>
-updated 107 minutes ago
+updated 110 minutes ago
 <span style="float:right">created: 05 October 2020
 </span>
 </div><div class=" tc-reveal">
