--- a/streaming-convolutional-neural-networks-for-end-to-end-learning-with-multi-megapixel-images.html
+++ b/streaming-convolutional-neural-networks-for-end-to-end-learning-with-multi-megapixel-images.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 10 minutes ago
+updated 19 seconds ago
 <span style="float:right">created: 13 October 2020
 </span>
 </div><div class=" tc-reveal">
