--- a/high-resolution-whole-prostate-biopsy-classification-using-streaming-stochastic-gradient-descent.html
+++ b/high-resolution-whole-prostate-biopsy-classification-using-streaming-stochastic-gradient-descent.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 7 minutes ago
+updated 23 hours ago
 <span style="float:right">created: 13 October 2020
 </span>
 </div><div class=" tc-reveal">
