--- a/neural-ordinary-differential-equations-for-semantic-segmentation-of-individual-colon-glands.html
+++ b/neural-ordinary-differential-equations-for-semantic-segmentation-of-individual-colon-glands.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 7 minutes ago
+updated 23 hours ago
 <span style="float:right">created: 13 October 2020
 </span>
 </div><div class=" tc-reveal">
