--- a/notes-on-dialing-in-a-espresso.html
+++ b/notes-on-dialing-in-a-espresso.html
@@ -13,7 +13,7 @@
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="static.css">
 <link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;700&display=swap" rel="stylesheet">
-<title>Host tiddlywiki for free with authentication on alwaysdata — Hans Pinckaers</title>
+<title>Notes on dialing in a espresso — Hans Pinckaers</title>
 </head>
 <body class="tc-body">
 
@@ -25,7 +25,7 @@
 
 
 <section class="tc-story-river">
-<p><div class="tc-tiddler-frame tc-tiddler-view-frame tc-tiddler-exists  tc-tagged-TiddlyWiki tc-tagged-Public" data-tags="TiddlyWiki Public" data-tiddler-title="Host tiddlywiki for free with authentication on alwaysdata"><div class="tc-tiddler-title"><div class="tc-titlebar"><span class="tc-tiddler-controls"><span class=" tc-reveal">
+<p><div class="tc-tiddler-frame tc-tiddler-view-frame tc-tiddler-exists  tc-tagged-Personal tc-tagged-Public" data-tags="Personal Public" data-tiddler-title="Notes on dialing in a espresso"><div class="tc-tiddler-title"><div class="tc-titlebar"><span class="tc-tiddler-controls"><span class=" tc-reveal">
 
 	<button class="tc-btn-invisible tc-btn-%24%3A%2F_sq%2FStories%2FdivertTiddlerMacro" title="Divert this tiddler to the other story">
 		
@@ -38,26 +38,26 @@
 	</button>
 
 
-</span><span class=" tc-reveal"><button aria-label="more" class="tc-btn-invisible tc-btn-%24%3A%2Fcore%2Fui%2FButtons%2Fmore-tiddler-actions" title="More actions"></button><div class=" tc-reveal" hidden="true"></div></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal"><button aria-label="edit" class="tc-btn-invisible tc-btn-%24%3A%2Fcore%2Fui%2FButtons%2Fedit" title="Edit this tiddler"></button></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal"><button aria-label="close" class="tc-btn-invisible tc-btn-%24%3A%2Fcore%2Fui%2FButtons%2Fclose" title="Close this tiddler"></button></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span></span><span><span class="tc-tiddler-title-icon" style="fill:;"></span><h2 class="tc-title">Host tiddlywiki for free with authentication on alwaysdata</h2></span></div><div class="tc-tiddler-info tc-popup-handle tc-reveal" hidden="true"></div></div><div class=" tc-reveal" hidden="true"></div>
+</span><span class=" tc-reveal"><button aria-label="more" class="tc-btn-invisible tc-btn-%24%3A%2Fcore%2Fui%2FButtons%2Fmore-tiddler-actions" title="More actions"></button><div class=" tc-reveal" hidden="true"></div></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal"><button aria-label="edit" class="tc-btn-invisible tc-btn-%24%3A%2Fcore%2Fui%2FButtons%2Fedit" title="Edit this tiddler"></button></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal"><button aria-label="close" class="tc-btn-invisible tc-btn-%24%3A%2Fcore%2Fui%2FButtons%2Fclose" title="Close this tiddler"></button></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span><span class=" tc-reveal" hidden="true"></span></span><span><span class="tc-tiddler-title-icon" style="fill:;"></span><h2 class="tc-title">Notes on dialing in a espresso</h2></span></div><div class="tc-tiddler-info tc-popup-handle tc-reveal" hidden="true"></div></div><div class=" tc-reveal" hidden="true"></div>
 <div class="tc-subtitle">
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 42 hours ago
-<span style="float:right">created: 22 August 2020
+updated 79 minutes ago
+<span style="float:right">created: 13 October 2020
 </span>
 </div><div class=" tc-reveal">
 <div class="tc-tags-wrapper"><span class="tc-tag-list-item">
+<span class="tc-tag-label tc-btn-invisible" draggable="true" style="background-color:#fee4a8;
+fill:rgba(0, 0, 0, 0.87);
+color:rgba(0, 0, 0, 0.87);">
+Personal
+</span>
+<span class="tc-drop-down tc-reveal" hidden="true"></span></span><span class="tc-tag-list-item">
 <span class="tc-tag-label tc-btn-invisible" draggable="true" style="background-color:;
 fill:rgba(0, 0, 0, 0.87);
 color:rgba(0, 0, 0, 0.87);">
 Public
-</span>
-<span class="tc-drop-down tc-reveal" hidden="true"></span></span><span class="tc-tag-list-item">
-<span class="tc-tag-label tc-btn-invisible" draggable="true" style="background-color:#ffc5ab;
-fill:rgba(0, 0, 0, 0.87);
-color:rgba(0, 0, 0, 0.87);">
-TiddlyWiki
 </span>
 <span class="tc-drop-down tc-reveal" hidden="true"></span></span></div>
 </div>
@@ -66,7 +66,7 @@ TiddlyWiki
   
 
 
-</div><div class="tc-tiddler-body tc-reveal"><p>Uploaded tiddlywiki to alwaysdata, was incredibly simple and free. They also provide https authentication.</p><p><strong>My tiddlywiki journey</strong></p><ul><li>Started with single tiddlywiki file</li><li>Made <a class="tc-tiddlylink-external" href="https://www.alwaysdata.com/en/" rel="noopener noreferrer" target="_blank">alwaysdata</a> account</li><li>In backend go to <em>Web</em> then to <em>Sites</em><ul><li>Remove default at free subdomain</li><li>Install new application</li><li>Choose tiddlywiki</li><li>Change /www to something like /tiddly</li></ul></li><li>Just dragged my single tiddlywiki file into the alwaysdata tiddlywiki, works!</li></ul></div>
+</div><div class="tc-tiddler-body tc-reveal"><ul><li>Lighter roasts: more work to extract the coffee, which means use less dose. If you start with a big dose, impossible amount of work to do. Sour, weak body as a result. Here underextraction can thus be because of too fine grinds as well!</li><li>Darker roast: easy to extract, soluble get out quickly, is OK to use a higher dose.</li><li>Instead of changing grind size you can also tweak dose a bit, add more dose: is more work to extract, slower flow, so longer contact time.</li><li>Brew time: 25-30 seconds is a good target, but not so important. </li><li>Grams out is very important to monitor, to keep the ratio the same.</li><li>Espresso ratio: 1.5-2.5, meaning ratio between grams coffee in and grams of liquid out.</li><li>Source: mainly <a class="tc-tiddlylink-external" href="https://youtu.be/aTFsBqhpLes" rel="noopener noreferrer" target="_blank">James Hoffman</a>'s fantastic <a class="tc-tiddlylink-external" href="https://www.youtube.com/channel/UCMb0O2CdPBNi-QqPk5T3gsQ" rel="noopener noreferrer" target="_blank">YouTube channel</a></li></ul></div>
 
 
 
