--- a/host-tiddlywiki-for-free-with-authentication-on-alwaysdata.html
+++ b/host-tiddlywiki-for-free-with-authentication-on-alwaysdata.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 42 hours ago
+updated 3 days ago
 <span style="float:right">created: 22 August 2020
 </span>
 </div><div class=" tc-reveal">
