--- a/notes-on-dialing-in-an-espresso.html
+++ b/notes-on-dialing-in-an-espresso.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 30 hours ago
+updated 11 hours ago
 <span style="float:right">created: 13 October 2020
 </span>
 </div><div class=" tc-reveal">
@@ -66,7 +66,7 @@ Public
   
 
 
-</div><div class="tc-tiddler-body tc-reveal"><ul><li>Lighter roasts: more work to extract the coffee, which means use less dose. If you start with a big dose, impossible amount of work to do. Sour, weak body as a result. Here underextraction can thus be because of too fine grinds as well!</li><li>Darker roast: easy to extract, soluble get out quickly, is OK to use a higher dose.</li><li>Instead of changing grind size you can also tweak dose a bit, add more dose: is more work to extract, slower flow, so longer contact time.</li><li>Brew time: 25-30 seconds is a good target, but not so important. </li><li>Grams out is very important to monitor, to keep the ratio the same.</li><li>Espresso ratio: 1.5-2.5, meaning ratio between grams coffee in and grams of liquid out.</li><li>Source: mainly <a class="tc-tiddlylink-external" href="https://youtu.be/aTFsBqhpLes" rel="noopener noreferrer" target="_blank">James Hoffman</a>'s fantastic <a class="tc-tiddlylink-external" href="https://www.youtube.com/channel/UCMb0O2CdPBNi-QqPk5T3gsQ" rel="noopener noreferrer" target="_blank">YouTube channel</a></li></ul></div>
+</div><div class="tc-tiddler-body tc-reveal"><ul><li>First keep recipe the same (amount of ground coffee in and amount of extracted coffee out) and tweak grind size to get brew time in the right range (25-30 seconds)</li><li>When numbers are in the right range use taste to tweak extraction: sourness is mostly under-extraction, bitterness is over-extraction.</li><li>Lighter roasts: more work to extract the coffee, which means use less dose or coarser grind. If you start with a big dose, impossible amount of work to do. Sour, weak body as a result. Here underextraction can thus be because of too fine grinds as well!</li><li>Darker roast: easy to extract, soluble get out quickly, is OK to use a higher dose. Can benefit from finer grind.</li><li>Instead of changing grind size you can also tweak dose a bit, add more dose: is more work to extract, slower flow, so longer contact time.</li><li>You can increase extraction with lower dose, also maybe combined with finer grind</li><li>Brew time: 25-30 seconds is a good target, but not so important. </li><li>You can also increase brew time for an extra little bit extraction, you trade this for strength (because you dilute), but can add clarity and sweetness</li><li>Grams out is very important to monitor, to keep the ratio the same.</li><li>Espresso ratio: 1.5-2.5, meaning ratio between grams coffee in and grams of liquid out.</li><li>Source: mainly <a class="tc-tiddlylink-external" href="https://youtu.be/aTFsBqhpLes" rel="noopener noreferrer" target="_blank">James Hoffman</a>'s fantastic <a class="tc-tiddlylink-external" href="https://www.youtube.com/channel/UCMb0O2CdPBNi-QqPk5T3gsQ" rel="noopener noreferrer" target="_blank">YouTube channel</a></li></ul></div>
 
 
 
