--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 6 minutes ago
+updated 2 days ago
 <span style="float:right">created: 12 October 2020
 </span>
 </div><div class=" tc-reveal">
@@ -72,6 +72,8 @@ Public
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./decaffeinated-coffee-beans-sources-in-the-netherlands">[Coffee] Decaffeinated coffee beans  — sources in The Netherlands</a></li>
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./host-tiddlywiki-for-free-with-authentication-on-alwaysdata">[TiddlyWiki] Host tiddlywiki for free with authentication on alwaysdata</a></li>
+
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./my-coffee-gear">[Coffee] My coffee gear</a></li>
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./notes-on-dialing-in-an-espresso">[Coffee] Notes on dialing in an espresso</a></li>
 
