--- a/neural-ordinary-differential-equations-for-semantic-segmentation-of-individual-colon-glands.html
+++ b/neural-ordinary-differential-equations-for-semantic-segmentation-of-individual-colon-glands.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 6 days ago
+updated 8 days ago
 <span style="float:right">created: 13 October 2020
 </span>
 </div><div class=" tc-reveal">
@@ -72,7 +72,7 @@ Public
   
 
 
-</div><div class="tc-tiddler-body tc-reveal"><ul><li>Read at <a class="tc-tiddlylink-external" href="https://arxiv.org/abs/1910.10470" rel="noopener noreferrer" target="_blank">arXiv</a></li><li>Published at <a class="tc-tiddlylink-external" href="https://sites.google.com/view/med-neurips-2019" rel="noopener noreferrer" target="_blank">Medical Imaging meets NeurIPS</a> - 2019</li></ul><p><strong>Abstract</strong></p><p>Automated medical image segmentation plays a key role in quantitative research and diagnostics. Convolutional neural networks based on the U-Net architecture are the state-of-the-art. A key disadvantage is the hard-coding of the receptive field size, which requires architecture optimization for each segmentation task. Furthermore, increasing the receptive field results in an increasing number of weights. Recently, Neural Ordinary Differential Equations (NODE) have been proposed, a new type of continuous depth deep neural network. This framework allows for a dynamic receptive field at a fixed memory cost and a smaller amount of parameters. We show on a colon gland segmentation dataset (<a class="tc-tiddlylink tc-tiddlylink-missing" href="./glas">GlaS</a>) that these NODEs can be used within the U-Net framework to improve segmentation results while reducing memory load and parameter counts.
+</div><div class="tc-tiddler-body tc-reveal"><ul><li>Read at <a class="tc-tiddlylink-external" href="https://arxiv.org/abs/1910.10470" rel="noopener noreferrer" target="_blank">arXiv</a></li><li>Published at <a class="tc-tiddlylink-external" href="https://sites.google.com/view/med-neurips-2019" rel="noopener noreferrer" target="_blank">Medical Imaging meets NeurIPS</a> - 2019</li></ul><p><strong>Abstract</strong></p><p>Automated medical image segmentation plays a key role in quantitative research and diagnostics. Convolutional neural networks based on the U-Net architecture are the state-of-the-art. A key disadvantage is the hard-coding of the receptive field size, which requires architecture optimization for each segmentation task. Furthermore, increasing the receptive field results in an increasing number of weights. Recently, Neural Ordinary Differential Equations (NODE) have been proposed, a new type of continuous depth deep neural network. This framework allows for a dynamic receptive field at a fixed memory cost and a smaller amount of parameters. We show on a colon gland segmentation dataset (GlaS) that these NODEs can be used within the U-Net framework to improve segmentation results while reducing memory load and parameter counts.
 </p></div>
 
 
