--- a/notes-on-dialing-in-an-espresso.html
+++ b/notes-on-dialing-in-an-espresso.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 5 hours ago
+updated 2 days ago
 <span style="float:right">created: 13 October 2020
 </span>
 </div><div class=" tc-reveal">
