--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@ Public
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./decaffeinated-coffee-beans-sources-in-the-netherlands">[Coffee] Decaffeinated coffee beans  — sources in The Netherlands</a></li>
 
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./draft-of-sitemap-by-hanspinckaers">Draft of 'sitemap' by hanspinckaers</a></li>
+
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./host-tiddlywiki-for-free-with-authentication-on-alwaysdata">[TiddlyWiki] Host tiddlywiki for free with authentication on alwaysdata</a></li>
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./my-coffee-gear">[Coffee] My coffee gear</a></li>
