--- a/index.html
+++ b/index.html
@@ -71,8 +71,6 @@ Public
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./decaffeinated-coffee-beans-sources-in-the-netherlands">[Coffee] Decaffeinated coffee beans  — sources in The Netherlands</a></li>
 
-<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./draft-of-sitemap-by-hanspinckaers">Draft of 'sitemap' by hanspinckaers</a></li>
-
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./host-tiddlywiki-for-free-with-authentication-on-alwaysdata">[TiddlyWiki] Host tiddlywiki for free with authentication on alwaysdata</a></li>
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./my-coffee-gear">[Coffee] My coffee gear</a></li>
@@ -81,7 +79,7 @@ Public
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./using-a-sony-alpha-camera-as-a-webcam-in-ubuntu">[Photography] Using a Sony alpha camera as a webcam in Ubuntu</a></li>
 
-<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./sitemap">sitemap</a></li>
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./sitemap">[Sitemap] sitemap</a></li>
 
 </ul></p><p><strong>My research</strong></p><p>My PhD, so far, has been about  training a network memory efficient, resulting in a novel method which gives the possibility to train a  ResNet34 with gigantic images (up to 268 megapixels) end-to-end with a single label per image.
 <br></p><ul><li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./training-convolutional-neural-networks-with-megapixel-images">Training convolutional neural networks with megapixel images</a><ul><li>First proof of concept of my method to train memory efficiently. </li><li>Published at the <a class="tc-tiddlylink-external" href="https://2020.midl.io/" rel="noopener noreferrer" target="_blank">MIDL 2018</a> conference.</li></ul></li><li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./streaming-convolutional-neural-networks-for-end-to-end-learning-with-multi-megapixel-images">Streaming convolutional neural networks for end-to-end learning with multi-megapixel images</a><ul><li>Full paper about the method. </li><li><strong>Read this if you want to know how it works.</strong></li><li>Published in <a class="tc-tiddlylink-external" href="https://doi.org/10.1109/TPAMI.2020.3019563" rel="noopener noreferrer" target="_blank">IEEE Transactions on Pattern Analysis and Machine Intelligence</a>. Read older preprint at <a class="tc-tiddlylink-external" href="https://arxiv.org/abs/1911.04432" rel="noopener noreferrer" target="_blank">arXiv</a></li></ul></li><li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./high-resolution-whole-prostate-biopsy-classification-using-streaming-stochastic-gradient-descent">High resolution whole prostate biopsy classification using streaming stochastic gradient descent</a><ul><li>First real application of the method. </li><li>Published at <a class="tc-tiddlylink-external" href="https://geertlitjens.nl/publication/pinc-19/pinc-19.pdf" rel="noopener noreferrer" target="_blank">SPIE Medical Imaging 2019</a>.</li></ul></li><li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./detection-of-prostate-cancer-in-whole-slide-images-through-end-to-end-training-with-image-level-labels">Detection of prostate cancer in whole-slide images through end-to-end training with image-level labels</a><ul><li>Full paper about the application on prostate biopsies</li><li>Currently in review.</li></ul></li><li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./neural-ordinary-differential-equations-for-semantic-segmentation-of-individual-colon-glands">Neural Ordinary Differential Equations for Semantic Segmentation of Individual Colon Glands</a><ul><li>Fun little sideproject </li><li>Published in <a class="tc-tiddlylink-external" href="https://sites.google.com/view/med-neurips-2019" rel="noopener noreferrer" target="_blank">Medical Imaging meets NeurIPS - 2019</a></li></ul></li></ul></div>
@@ -104,7 +102,7 @@ Public
                     
                         <hr>
                         <span style="font-size:0.85em">
-                            <em>1  References:</em> 
+                            <em>2  References:</em> 
                         </span>
                         
                             <span class=" tc-reveal">
