--- a/sitemap.html
+++ b/sitemap.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 96 seconds ago
+updated 2 minutes ago
 <span style="float:right">created: 21 October 2020
 </span>
 </div><div class=" tc-reveal">
