--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 4 seconds ago
+updated 17 minutes ago
 <span style="float:right">created: 12 October 2020
 </span>
 </div><div class=" tc-reveal">
