--- a/using-a-sony-alpha-camera-as-a-webcam-in-macos-catalina.html
+++ b/using-a-sony-alpha-camera-as-a-webcam-in-macos-catalina.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 7 seconds ago
+updated 7 days ago
 <span style="float:right">created: 06 November 2020
 </span>
 </div><div class=" tc-reveal">
