--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 22 days ago
+updated 25 days ago
 <span style="float:right">created: 12 October 2020
 </span>
 </div><div class=" tc-reveal">
@@ -70,6 +70,8 @@ Public
 <br></p><p><ul>
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./decaffeinated-coffee-beans-sources-in-the-netherlands">[Coffee] Decaffeinated coffee beans  — sources in The Netherlands</a></li>
+
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./fixing-coc-pyright-and-anaconda-import-errors">[Vim] Fixing coc-pyright and anaconda import errors</a></li>
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./host-tiddlywiki-for-free-with-authentication-on-alwaysdata">[TiddlyWiki] Host tiddlywiki for free with authentication on alwaysdata</a></li>
 
