--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 27 days ago
+updated 3 months ago
 <span style="float:right">created: 12 October 2020
 </span>
 </div><div class=" tc-reveal">
@@ -74,6 +74,8 @@ Public
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./fixing-coc-pyright-and-anaconda-import-errors">[Vim] Fixing coc-pyright and anaconda import errors</a></li>
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./host-tiddlywiki-for-free-with-authentication-on-alwaysdata">[TiddlyWiki] Host tiddlywiki for free with authentication on alwaysdata</a></li>
+
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./make-conda-fast-how-i-use-conda">Make conda fast — how I use conda</a></li>
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./my-coffee-gear">[Coffee] My coffee gear</a></li>
 
