--- a/my-coffee-gear.html
+++ b/my-coffee-gear.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 27 days ago
+updated 3 months ago
 <span style="float:right">created: 19 October 2020
 </span>
 </div><div class=" tc-reveal">
