--- a/training-convolutional-neural-networks-with-megapixel-images.html
+++ b/training-convolutional-neural-networks-with-megapixel-images.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 36 days ago
+updated 3 months ago
 <span style="float:right">created: 13 October 2020
 </span>
 </div><div class=" tc-reveal">
