--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Public
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./host-tiddlywiki-for-free-with-authentication-on-alwaysdata">[TiddlyWiki] Host tiddlywiki for free with authentication on alwaysdata</a></li>
 
-<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./make-conda-fast-how-i-use-conda">Make conda fast — how I use conda</a></li>
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./make-conda-fast-how-i-use-conda">[Python] Make conda fast — how I use conda</a></li>
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./my-coffee-gear">[Coffee] My coffee gear</a></li>
 
