--- a/make-conda-fast-how-i-use-conda.html
+++ b/make-conda-fast-how-i-use-conda.html
@@ -25,7 +25,7 @@
 
 
 <section class="tc-story-river">
-<p><div class="tc-tiddler-frame tc-tiddler-view-frame tc-tiddler-exists  tc-tagged-Public" data-tags="Public" data-tiddler-title="Make conda fast — how I use conda"><div class="tc-tiddler-title"><div class="tc-titlebar"><span class="tc-tiddler-controls"><span class=" tc-reveal">
+<p><div class="tc-tiddler-frame tc-tiddler-view-frame tc-tiddler-exists  tc-tagged-Public tc-tagged-Python" data-tags="Public Python" data-tiddler-title="Make conda fast — how I use conda"><div class="tc-tiddler-title"><div class="tc-titlebar"><span class="tc-tiddler-controls"><span class=" tc-reveal">
 
 	<button class="tc-btn-invisible tc-btn-%24%3A%2F_sq%2FStories%2FdivertTiddlerMacro" title="Divert this tiddler to the other story">
 		
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 34 seconds ago
+updated 4 seconds ago
 <span style="float:right">created: 27 January 2021
 </span>
 </div><div class=" tc-reveal">
@@ -52,6 +52,12 @@ updated 34 seconds ago
 fill:rgba(0, 0, 0, 0.87);
 color:rgba(0, 0, 0, 0.87);">
 Public
+</span>
+<span class="tc-drop-down tc-reveal" hidden="true"></span></span><span class="tc-tag-list-item">
+<span class="tc-tag-label tc-btn-invisible" draggable="true" style="background-color:;
+fill:rgba(0, 0, 0, 0.87);
+color:rgba(0, 0, 0, 0.87);">
+Python
 </span>
 <span class="tc-drop-down tc-reveal" hidden="true"></span></span></div>
 </div>
