--- a/make-conda-fast-how-i-use-conda.html
+++ b/make-conda-fast-how-i-use-conda.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 4 seconds ago
+updated 8 seconds ago
 <span style="float:right">created: 27 January 2021
 </span>
 </div><div class=" tc-reveal">
@@ -66,7 +66,7 @@ Python
   
 
 
-</div><div class="tc-tiddler-body tc-reveal"><p>What I do:</p><ul><li>Instead of conda, use 'miniconda'</li><li>Always use <strong>conda-forge</strong> channel<ul><li><code>conda config --add channels conda-forge</code></li><li><code>conda config --set channel_priority strict</code></li></ul></li><li><code>conda create -n mambacv python=3.8 opencv</code><ul><li>If I don't install opencv first I always have problems</li></ul></li><li><strong>Use mamba</strong>: <a class="tc-tiddlylink-external" href="https://github.com/mamba-org/mamba" rel="noopener noreferrer" target="_blank">https://github.com/mamba-org/mamba</a><ul><li><code>conda install mamba -c conda-forge</code></li><li>then <code>mamba install ...</code> instead of <code>conda install ..</code></li><li>in the future maybe try micromamba</li><li>and try <a class="tc-tiddlylink-external" href="https://github.com/mamba-org/gator" rel="noopener noreferrer" target="_blank">https://github.com/mamba-org/gator</a></li></ul></li><li>I use <strong>numpy nightly</strong> (for typestubs):<ul><li>pip install -i <a class="tc-tiddlylink-external" href="https://pypi.anaconda.org/scipy-wheels-nightly/simple" rel="noopener noreferrer" target="_blank">https://pypi.anaconda.org/scipy-wheels-nightly/simple</a> numpy</li></ul></li></ul></div>
+</div><div class="tc-tiddler-body tc-reveal"><p>What I do:</p><ul><li>Instead of conda, use <strong>miniconda</strong></li><li>Always use <strong>conda-forge</strong> channel<ul><li><code>conda config --add channels conda-forge</code></li><li><code>conda config --set channel_priority strict</code></li></ul></li><li><code>conda create -n mambacv python=3.8 opencv</code><ul><li>If I don't install opencv first I always have problems</li></ul></li><li><strong>Use mamba</strong>: <a class="tc-tiddlylink-external" href="https://github.com/mamba-org/mamba" rel="noopener noreferrer" target="_blank">https://github.com/mamba-org/mamba</a><ul><li><code>conda install mamba -c conda-forge</code></li><li>then <code>mamba install ...</code> instead of <code>conda install ..</code></li><li>in the future maybe try micromamba</li><li>and try <a class="tc-tiddlylink-external" href="https://github.com/mamba-org/gator" rel="noopener noreferrer" target="_blank">https://github.com/mamba-org/gator</a></li></ul></li><li>I use <strong>numpy nightly</strong> (for typestubs):<ul><li><code>pip install -i https://pypi.anaconda.org/scipy-wheels-nightly/simple numpy</code></li></ul></li></ul></div>
 
 
 
