--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@ Public
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./notes-on-dialing-in-an-espresso">[Coffee] Notes on dialing in an espresso</a></li>
 
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./papers-on-concept-activation-vectors">[Deep learning] Papers on Concept Activation Vectors</a></li>
+
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./using-a-sony-alpha-camera-as-a-webcam-in-ubuntu">[Photography] Using a Sony alpha camera as a webcam in Ubuntu</a></li>
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./using-a-sony-alpha-camera-as-a-webcam-in-macos-catalina">[Photography] Using a Sony alpha camera as a webcam in macOS Catalina</a></li>
