--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Public
 <br>
 <ul>
 
-<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./diagnosing-learning-curves-problems">Diagnosing learning curves problems </a></li>
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./diagnosing-learning-curve-problems">Diagnosing learning curve problems </a></li>
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./papers-on-concept-activation-vectors">Papers on Concept Activation Vectors </a></li>
 
