--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 8 days ago
+updated 14 days ago
 <span style="float:right">created: 12 October 2020
 </span>
 </div><div class=" tc-reveal">
@@ -83,6 +83,10 @@ Public
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./diagnosing-learning-curve-problems">Diagnosing learning curve problems </a></li>
 
 <li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./papers-on-concept-activation-vectors">Papers on Concept Activation Vectors </a></li>
+
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./regression-with-fast-ai">Regression with fast.ai </a></li>
+
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./use-fast-ai-transforms-with-regular-pytorch">Use fast.ai transforms with regular PyTorch </a></li>
 
 </ul></p><p><strong>Programming stuff</strong>
 <br>
